# devops-2025S-demo

./: .gitignore  .pre-commit-config.yaml  README.md  deployment.yaml  pyproject.toml  requirements.txt  service.yaml
.github/workflows/: ci.yml
campus_notifier/: settings.py  urls.py
events/: admin.py  models.py  urls.py  views.py
events/migrations/: 0001_initial.py
events/templates/: base.html
events/templates/events/: event_detail.html  event_list.html  my_events.html
events/templates/registration/: logged_out.html  login.html
notifications/: admin.py  models.py
terraform/: main.tf
