[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-notifier"
version = "0.1.0"
description = "Campus event notification system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.ruff]
# Set the maximum line length to 88 (Black's default)
line-length = 88

# Assume Python 3.8+
target-version = "py38"

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*/migrations/*",
    "staticfiles",
]

[tool.ruff.lint]
# Enable recommended rules for Django projects
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DJ",    # flake8-django
    "PIE",   # flake8-pie
    "T20",   # flake8-print
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
]

# Ignore specific rules that are too strict for Django projects
ignore = [
    "E501",    # line too long (handled by formatter)
    "DJ001",   # avoid using `null=True` on string-based fields (sometimes necessary)
    "B008",    # do not perform function calls in argument defaults (common in Django)
    "RUF012",  # mutable class attributes (Django models use this pattern)
]

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in specific files
"__init__.py" = ["F401"]  # Unused imports
"*/migrations/*.py" = ["E501", "N806", "N999"]  # Long lines, naming conventions
"*/settings.py" = ["E501", "F405", "F403"]  # Long lines, star imports
"*/tests.py" = ["S101", "S106"]  # Use of assert, hardcoded passwords in tests
"*/test_*.py" = ["S101", "S106"]
"manage.py" = ["T201"]  # Allow print statements in management commands

[tool.ruff.lint.isort]
# Use Django's isort profile
known-first-party = ["campus_notifier", "events", "notifications"]
section-order = ["future", "standard-library", "third-party", "django", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
# Create a dedicated section for Django imports
django = ["django"]

[tool.ruff.lint.mccabe]
# Set maximum complexity threshold
max-complexity = 10

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Use Unix-style line endings
line-ending = "lf"

# Enable auto-formatting of code examples in docstrings
# docstring-code-format = true

# Set the line length limit for docstrings
# docstring-code-line-length = 72
